--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       
         <a href="http://ondoheer.com">
           <hgroup>
-            <h1>Ondoheer's Testing Ground</h1>
-            <h2>Mocks | Tests | Ideas</h2>
+            <h1>Ondoheer's Personal Ground</h1>
+            <h2>Apps | Tests | Ideas</h2>
           </hgroup>
         </a>
         
