--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <!-- GOT Character Creator -->
       <article>
-        <a href="http://westeros.herokuapp.com/npc">
+        <a href="http://westeros.ondoheer.com/npc">
           <header>
             <div class="details"> 
               <h1>ASOIF</h1>
